# project_grade1

./: 2024212367-周于湲-基于深度学习的手势识别系统的设计与实现.doc  CMakeLists.txt  README.md  collect_keypoints.py  main.cpp  mediapipe_sender.py  save_npy_to_csv.py  train_gesture_model.py  项目研究结题报告_最终完整版_含图表.docx
weights/: fc1_b.csv  fc1_w.csv  fc2_b.csv  fc2_w.csv  fc3_b.csv  fc3_w.csv
